# block26

task1/: CMakeLists.txt
task1/include/: ClassPlayer.h  ClassTrack.h
task1/src/: CMakeLists.txt  ClassPlayer.cpp  ClassTrack.cpp  task1.cpp
task2/include/: ClassNumber.h  Phone.h  record.h
task2/src/: CMakeLists.txt  ClassNumber.cpp  Phone.cpp  record.cpp  task2.cpp
task3/: CMakeLists.txt
task3/include/: ClassMonitor.h  ClassWindow.h
task3/src/: CMakeLists.txt  ClassMonitor.cpp  ClassWindow.cpp  main3.cpp
